# text-convert

./: README.md  text-convert.cabal
src/tests/: TestsMain.hs
src/tests-main/: tests-main.hs
src/text-convert/Text/: Convert.hs
