cabal-version:      2.2
name:               text-convert
version:            0.1.0.0
category:           Data
synopsis:           Convert between various textual representation.
description:
  Convert between various types representing textual data. This library differs
  from the similar 'string-conversions' library in that this library exports
  class methods that are monomorphic in their return type. This enhances
  readability and aids type inference.

homepage:           https://github.com/friedbrice/text-convert#readme
bug-reports:        https://github.com/friedbrice/text-convert/issues
author:             Daniel Brice
maintainer:         danielbrice@gmail.com
copyright:          2025 Daniel Brice
license:            BSD-3-Clause
license-file:       LICENSE
extra-source-files: README.md
build-type:         Simple
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

source-repository head
  type:     git
  location: https://github.com/friedbrice/text-convert

common dialect
  default-language:   Haskell2010
  ghc-options:        -Wall
  default-extensions:
    FlexibleInstances
    ImportQualifiedPost
    ScopedTypeVariables
    TypeApplications

  build-depends:
    , base        >=4.16 && <5
    , bytestring  >=0.11 && <0.13
    , text        >=1.2  && <2.2

common deps-tests
  build-depends:
    , hspec
    , QuickCheck
    , text-convert

library
  import:          dialect
  hs-source-dirs:  src/text-convert

  -- cabal-fmt: expand src/text-convert
  exposed-modules: Text.Convert

test-suite tests
  import:         dialect
  import:         deps-tests
  type:           exitcode-stdio-1.0
  build-depends:  text-convert
  hs-source-dirs: src/tests src/tests-main
  main-is:        tests-main.hs

  -- cabal-fmt: expand src/tests
  other-modules:  TestsMain

test-suite dev
  import:             dialect
  import:             deps-tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     src/text-convert src/tests src/tests-main
  main-is:            tests-main.hs
  default-extensions:
    InstanceSigs
    PartialTypeSignatures

  -- cabal-fmt: expand src/text-convert
  -- cabal-fmt: expand src/tests
  other-modules:
    TestsMain
    Text.Convert
